--- a/docs/api.tex
+++ b/docs/api.tex
@@ -34,7 +34,7 @@ Create a new IPC channel. The return value is a channel descriptor number, which
 is local to the current task. There are currently no flags.
 \item \begin{verbatim}int sys_close(int chan);\end{verbatim}
 Close a channel descriptor. If this is the last channel descriptor for
-this channel, the channel is destroy.
+this channel, the channel is destroyed.
 \item \begin{verbatim}int sys_dup(int oldchan, int newchan, int flags);\end{verbatim}
 Duplicate a channel descriptor. The existing channel descriptor at \emph{newchan} is closed (if open) and replaced with a channel
 descriptor that corresponds to the same channel as \emph{oldchan}. If \emph{newchan} is -1, an unused
@@ -101,7 +101,7 @@ file server.
 	The \emph{dirfd} parameter is currently unused.
 \item \begin{verbatim}int mkdir(int dirfd, const char *pathname);\end{verbatim}
 	Create a directory at \emph{pathname}.
-	The\emph{dirfd} parameter is currently unused.
+	The \emph{dirfd} parameter is currently unused.
 \item \begin{verbatim}int mkchan(int dirfd, const char *pathname);\end{verbatim}
 	Create a new channel at \emph{pathname}. Note that this does not open
 	the created channel in the current task; for that, use \emph{open}.
